--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="thu">Thu</string>
     <string name="sat">Sat</string>
     <string name="sun">Sun</string>
+
+    <string name="add_alarm">Alarm %s was scheduled at %s - %02d:%02d !</string>
+    <string name="cancel_alarm">Alarm %s was cancelled at %s - %02d:%02d !</string>
+
 </resources>
