--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <string name="sun">Sun</string>
 
     <string name="add_alarm">Alarm %s at %s - %02d:%02d was scheduled!</string>
-    <string name="cancel_alarm">Alarm %s  at %s - %02d:%02d was cancelled!</string>
+    <string name="cancel_alarm">Alarm %s at %02d:%02d was cancelled!</string>
     <string name="noti_alarm_name">%s Alarm</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="snooze">Snooze</string>
 
 </resources>
